--- a/back-end/package.json
+++ b/back-end/package.json
@@ -11,10 +11,12 @@
     "@types/express": "^4.17.21",
     "@types/morgan": "^1.9.9",
     "@types/multer": "^1.4.11",
+    "prisma": "^5.12.1",
     "tsx": "^4.7.2",
     "typescript": "^5.4.5"
   },
   "dependencies": {
+    "@prisma/client": "^5.12.1",
     "@supabase/supabase-js": "^2.42.4",
     "axios": "^1.6.8",
     "cors": "^2.8.5",
